# app-tracker

./: .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json
src/: App.tsx  RootContext.tsx  constants.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_tracker.rs  app_usage.rs  main.rs
src/components/Navbar/: Navbar.module.css  Navbar.tsx
src/components/ProcessList/: ProcessList.module.css  ProcessList.tsx  index.tsx  style.css
