[package]
name = "app-tracker"
version = "0.0.0"
description = "A Tauri App"
authors = ["Rohith Suju"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 0
debug = false

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "system-tray"] }
active-win-pos-rs = "0.7.1"

[patch.crates-io]
active-win-pos-rs = {git="https://github.com/xXRSTCXx/active-win-pos-rs", branch="uwp"}

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
